--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addEatingHouse.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addEatingHouse.html
@@ -16,6 +16,7 @@
                         th:field="*{name}"
                         placeholder="매장이름"
                         autocomplete="off"
+                        maxlength="16"
                         required
                 />
             </fieldset>
