--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editConcate.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editConcate.html
@@ -8,10 +8,10 @@
         th:object="${editConcateForm}"
         class="eating_house"
       >
-		<address class="editConcate__title">키워드 수정</address>
+		<address class="editConcate__title">카테고리 수정</address>
         <fieldset class="text__field">
           <fieldset class="eating_house__fieldset">
-            <legend class="eating_house__legend">기존 키워드</legend>
+            <legend class="eating_house__legend">기존 카테고리명</legend>
             <h3
               th:text="${condition}"
                 id="name"
@@ -19,7 +19,7 @@
             />
           </fieldset>
           <fieldset class="eating_house__fieldset">
-            <legend class="eating_house__legend">새로운 키워드</legend>
+            <legend class="eating_house__legend">새로운 카테고리명</legend>
             <input
               id="after"
               th:field="*{after}"
