--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editConditionMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editConditionMenu.html
@@ -30,7 +30,7 @@
         </fieldset>
         <fieldset class="eating_house__button__container">
         	<button class="eating_house__button">수정하기</button>
-        	<a class="eating_house__button" th:href="@{/admin/admin_recommend}">돌아가기</a>
+        	<a class="eating_house__button" th:href="@{'/admin/admin_recommend/editCondition/' + ${conditionId} + '/delete/' + ${conditionMenuId}}">삭제하기</a>
       	</fieldset>
       </form>
     </div>
