--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editEatingHouse.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editEatingHouse.html
@@ -19,6 +19,7 @@
               th:field="*{name}"
               class="eating_house__input"
               type="text"
+              maxlength="16"
             />
           </fieldset>
           <fieldset class="eating_house__fieldset">
