--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendAdmin.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendAdmin.html
@@ -47,14 +47,14 @@
             </li>
             <li>
                 <div th:object="${concate2}">              
-	                <label class="keyword_nav__item" for="keyword_nav__trigger01">
+	                <label class="keyword_nav__item" for="keyword_nav__trigger02">
 	                	<a th:href="@{/admin/admin_recommend/editConcate/2}" th:value="${concate2.id}" th:text="'오늘' + ${concate2.name} + '는?'"/>
 	                </label>	                            
 	            </div>    
             </li>
             <li>
                <div th:object="${concate3}">              
-	                <label class="keyword_nav__item" for="keyword_nav__trigger01">
+	                <label class="keyword_nav__item" for="keyword_nav__trigger03">
 	                	<a th:href="@{/admin/admin_recommend/editConcate/3}" th:value="${concate3.id}" th:text="'오늘' + ${concate3.name} + '은?'"/>
 	                </label>	                            
 	            </div>  
@@ -65,27 +65,27 @@
           <li class="keyword_box__item">
             <form id="section_search">
               <label th:each="condition : ${condition1}">
-              	<a th:href="@{'/admin/admin_recommend/editCondition/' + ${condition.id}}"><input th:value="${condition.id}" th:text="${condition.name}"/></a>
+              	<a th:href="@{'/admin/admin_recommend/editCondition/' + ${condition.id}}"><input th:value="${condition.id}" th:text="${condition.name}" type="checkbox"/></a>
               </label>              
             </form>
           </li>
           <li class="keyword_box__item">
             <form id="section_search">
-              <label th:each="condition : ${condition2}">
-              	<a th:href="@{/admin/admin_recommend/editCondition}"><input name="condition" th:value="${condition.id}" th:text="${condition.name}"/></a>
-              </label> 
+              <label th:each="condition : ${condition2}" >
+                <a th:href="@{'/admin/admin_recommend/editCondition/' + ${condition.id}}"><input th:value="${condition.id}" th:text="${condition.name}"/></a>
+              </label>
             </form>
           </li>
           <li class="keyword_box__item">
             <form id="section_search">
-               <label th:each="condition : ${condition3}">
-                 <a th:href="@{/admin/admin_recommend/editCondition}"><input name="condition" th:value="${condition.id}" th:text="${condition.name}"/></a>
-               </label>  
+              <label th:each="condition : ${condition3}">
+                <a th:href="@{'/admin/admin_recommend/editCondition/' + ${condition.id}}"><input th:value="${condition.id}" th:text="${condition.name}" type="checkbox"/></a>
+              </label>
             </form>
           </li>
         </ul>
-        <button type="submit" id="input_submit" onclick="location.href='/customer/recommendResult'">결정하기</button>
-        <button id="reset">다시 고르기</button>
+<!--        <button type="submit" id="input_submit" onclick="location.href='/customer/recommendResult'">결정하기</button>-->
+<!--        <button id="reset">다시 고르기</button>-->
       </div>
     </main>
     <footer class="footer"></footer>
