--- a/WhatToEatToday/src/main/resources/templates/fragments/main/researchMenuList.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/researchMenuList.html
@@ -4,7 +4,7 @@
     <div class="inner">
         <ul class="eating_house__menu_list">
             <li  class="eating_house__menu" th:each="menu : ${menu}">
-              <a  class="eating_house__inner" th:href="@{/customer/eating_house/All}">
+              <a  class="eating_house__inner" th:href="@{'/customer/eating_house/' + ${menu.getEatingHouse().getId()}}">
             
                 <div class="eating_house__menu_inner">
                     <figure class="eating_house__menu__img_fieldset">
